[package]
name = "mpv_stream"
version = "0.5.0"
edition = "2018"

[dependencies]
serde_json = "1.0"
curl = "0.4"
libmpv = "2.0"
toml = "0.5"
xdg = "2.2"
crossbeam = "0.8"
futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
cursive = "0.15"

# workaround because conflict package between curl and tokio
[dependencies.miow]
socket2 = "0.3.15"
