[package]
name = "twipv"
version = "0.8.0"
edition = "2021"

[dependencies]
serde_json = "^1.0"
curl = "^0.4"
# workaround : this package use openssl 1.1 dynamicly linked and debian use Openssl 3.0
openssl-sys = { version = "^0.9", features = ["vendored"] }
libmpv = "^2.0"
toml = "^0.5"
xdg = "^2.4"
futures = "^0.3"
tokio = { version = "1.18", features = ["full"] }

[dependencies.cursive]
version = "0.18"
features = ["termion-backend"]
